--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^4.12.1",
+    "lodash": "^4.17.5",
     "vue": "2.5.16"
   },
   "devDependencies": {
