--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "firebase": "^4.12.1",
     "lodash": "^4.17.5",
-    "vue": "2.5.16"
+    "vue": "2.5.16",
+    "vuetify": "^1.0.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.1",
